@@ -1,7 +1,7 @@
 #/*! \page config_macros Default configuration: @RPMCONFIGDIR@/macros
 # \verbatim
 #
-# $Id: macros.in,v 1.154.2.2 2004/12/05 20:05:46 jbj Exp $
+# $Id: macros.in,v 1.154.2.3 2005/01/26 04:05:34 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -832,6 +832,18 @@ print (t)\
 #
 # XXX	Note: escaped %% for use in headerSprintf()
 %_query_all_fmt		%%{name}-%%{version}-%%{release}
+
+#
+# Default path to the file used for transaction fcmtl lock.
+#
+# The previous, FHS clompliant, name was /var/lock/run/transaction,
+# but the transaction lock needs to be per-database, not global, for
+# some rpmdb operations.
+#
+# XXX Note: the file name is chosesn as __db.000 to expedite
+# support issues, many users are doing "rm -f /var/lib/rpm/__db*"
+# these days.
+%_rpmlock_path	%{_dbpath}/__db.000
 
 #==============================================================================
 # ---- Cache configuration macros.
